src/tess/tl/test/fail/test_fail_lambda_implicit_return.tl
#module Test

f() {
    () { 42 }
}

#module main

main() {
    0
}
